<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:id="@+id/menu_add" android:title="@string/menu_add" />
	<item android:id="@+id/account_sync" android:title="@string/account_sync" />
	<!-- 日程模块 -->
	<item android:id="@+id/menu_calendar" android:title="@string/menu_calendar" />
	<item android:id="@+id/menu_calendar_list" android:title="@string/menu_calendar_list" />
	
	<item android:id="@+id/menu_5" android:title="@string/menu_5">
		<menu>
			<item android:id="@+id/submenu_1" android:title="@string/submenu_1" />
			<item android:id="@+id/submenu_2" android:title="@string/submenu_2" />
			<item android:id="@+id/submenu_3" android:title="@string/submenu_3" />
		</menu>
	</item>
	
	<item android:id="@+id/menu_6" android:title="@string/menu_6" />
	<item android:id="@+id/menu_7" android:title="@string/menu_7" />
	<item android:id="@+id/menu_8" android:title="@string/menu_8" />
</menu>